feat(index.html): Updated copyright information at the bottom of the page

--- a/index.html
+++ b/index.html
@@ -258,11 +258,14 @@
       </div>
     </main>
 
-    <div class="attribution">
+    <footer class="attribution" role="contentinfo">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="uuu#">yunxiaodao</a>.
-    </div>
+      >. Coded by
+      <a href="https://github.com/yunxiaodao/qr-code-component-main"
+        >yunxiaodao</a
+      >.
+    </footer>
   </body>
 </html>
