--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
       </div>
     </main>
 
-    <footer class="attribution" role="contentinfo">
+    <!-- <footer class="attribution" role="contentinfo">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
@@ -266,6 +266,6 @@
       <a href="https://github.com/yunxiaodao/qr-code-component-main"
         >yunxiaodao</a
       >.
-    </footer>
+    </footer> -->
   </body>
 </html>
